[package]
name = "reshader"
version = "1.0.1"
edition = "2021"
authors = ["cozyGalvinism <jean@der-capta.in>"]
exclude = [
    "README.md",
    ".gitignore",
    "rustfmt.toml",
    ".github"
]
license = "LGPL-3.0-only"

[lib]
name = "reshaderlib"
path = "src/lib/lib.rs"

[[bin]]
name = "reshader"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
colored = "2.0.0"
dircpy = "0.3.14"
directories = "4.0.1"
git2 = "0.16.1"
inquire = "0.5.3"
lazy_static = "1.4.0"
open = "3.2.0"
reqwest = { version = "0.11.14", features = ["json"] }
rust-ini = "0.18.0"
semver = "1.0.16"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.92"
shellexpand = "3.0.0"
strum = { version = "0.24.1", features = ["derive"] }
tempdir = "0.3.7"
thiserror = "1.0.38"
tokio = { version = "1.25.0", features = ["full"] }
toml = "0.7.2"
zip = "0.6.4"
